force-app/main/default/objects/KlopotekAccountContactRelationship__c/KlopotekAccountContactRelationship__c.object-meta.xml
<CustomObject>
    <label>Klopotek Account Contact Relationship</label>
    <nameField>
        <displayFormat>KLPACR-{0000000}</displayFormat>
        <label>Klopotek Account Contact Relationship Nu</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klopotek Account Contact Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>