force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/AccountContactRelationshipId__c.field-meta.xml
<CustomField>
    <fullName>AccountContactRelationshipId__c</fullName>
    <label>Account Contact Relationship ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>