force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/DEPARTMENT2__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENT2__c</fullName>
    <label>DEPARTMENT2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>