force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/DEPARTMENT__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENT__c</fullName>
    <label>DEPARTMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>