force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/DOCNR__c.field-meta.xml
<CustomField>
    <fullName>DOCNR__c</fullName>
    <externalId>true</externalId>
    <label>DOCNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>