force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/EMAIL_COMMUNICATION_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_COMMUNICATION_NUMBER__c</fullName>
    <label>EMAIL_COMMUNICATION_NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>