force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/ID_JURISTIC_PERSON_INSTITUUT__c.field-meta.xml
<CustomField>
    <fullName>ID_JURISTIC_PERSON_INSTITUUT__c</fullName>
    <label>ID_JURISTIC_PERSON_INSTITUUT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>