force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/ID_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>ID_LOCATION__c</fullName>
    <externalId>true</externalId>
    <label>ID_LOCATION</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>