force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/KlopotekAccount__c.field-meta.xml
<CustomField>
    <fullName>KlopotekAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klopotek Account</label>
    <referenceTo>KlopotekAccount__c</referenceTo>
    <relationshipName>Klopotok_Account_Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>