force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/KlopotekContact__c.field-meta.xml
<CustomField>
    <fullName>KlopotekContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Klopotek Contact</label>
    <referenceTo>KlopotekContact__c</referenceTo>
    <relationshipName>Klopotok_Account_Contact_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>