force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/POSITION__c.field-meta.xml
<CustomField>
    <fullName>POSITION__c</fullName>
    <label>POSITION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>