force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/ROWNUM__c.field-meta.xml
<CustomField>
    <fullName>ROWNUM__c</fullName>
    <label>ROWNUM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>