force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/RowNumber__c.field-meta.xml
<CustomField>
    <fullName>RowNumber__c</fullName>
    <formula>VALUE(ID_LOCATION__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RowNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>