force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/SalesforceAccountId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceAccountId__c</fullName>
    <formula>KlopotekAccount__r.Account__c</formula>
    <label>Salesforce Account ID</label>
    <type>Text</type>
</CustomField>