force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/SalesforceContactId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceContactId__c</fullName>
    <formula>KlopotekContact__r.Contact__c</formula>
    <label>Salesforce Contact ID</label>
    <type>Text</type>
</CustomField>