force-app/main/default/objects/KlopotekAccountContactRelationship__c/fields/SCHNR__c.field-meta.xml
<CustomField>
    <fullName>SCHNR__c</fullName>
    <externalId>true</externalId>
    <label>SCHNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>