force-app/main/default/objects/KlopotekAccountContactRelationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KlopotekAccount__c</columns>
    <columns>SalesforceAccountId__c</columns>
    <columns>KlopotekContact__c</columns>
    <columns>SalesforceContactId__c</columns>
    <columns>AccountContactRelationshipId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>